--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                                                 community where all Real agents could connect. That’s where Workvivo
                                                 comes in!</p>
                                         </td>
-                                        <td class="d_none" style="width: 30%">
+                                        <td class="table text_center w_100" style="width: 30%">
                                             <img width="213" height="220.47"
                                                 src="https://i.postimg.cc/W3v26L71/iPhone.png"
                                                 alt="Iphone" />
@@ -415,7 +415,7 @@
                                                 </a>
                                             </div>
                                         </td>
-                                        <td class="table text_start mx-auto" style="vertical-align: top;padding:17px 20px 0;">
+                                        <td class="table text_start mx_auto" style="vertical-align: top;padding:17px 20px 0;">
                                             <h3 style="font-size: 18px;font-weight: 600;line-height: 27px;text-align: center;color: #6CCAD2;margin-bottom: 8px;
         ">Real Luxury</h3>
                                             <div
