--- a/index2.html
+++ b/index2.html
@@ -500,7 +500,7 @@
                                 <p style="font-size: 14px;font-weight: 400;line-height: 21px;text-align: left;color: #686968;
                                 ">With thousands of agents across the US and Canada, we needed a virtual community where all Real agents could connect. That’s where Workvivo comes in!</p>
                             </td>
-                            <td class="d_none" style="width: 30%; padding-top: 23px;">
+                            <td class="table text_center w_100 p_0" style="width: 30%; padding-top: 23px;">
                                 <img width="212" height="220"
                                     src="https://i.postimg.cc/W3v26L71/iPhone.png"
                                     alt="Iphone" />
@@ -732,7 +732,6 @@
 
                     </a>
                 </div>
-                <br>
                 <div style="padding: 20px 44px 0px" class="px_20">
                     <h2 class="fs_28" style="
             font-size: 32px;
@@ -748,7 +747,7 @@
                         Stay updated on big announcements, new agents, and content collaborations by
                         following us on social media.
                     </p>
-                    <div style="margin: 8px 0 14px">
+                    <div style="margin: 8px 0 14px" class="m_0">
                         <a target="_blank" href="https://www.instagram.com/realbrokerage/">
                             <img class="max_w_40" style="max-width: 47px"
                                 src="https://image.mail.onereal.com/lib/fe3c11737164047f701470/m/1/fce203e1-9111-4797-a08c-4a3919308596.png"
@@ -779,6 +778,11 @@
                         </a>
                     </div>
                 </div>
+                <div style="padding: 20px 44px 26px;" class="px_20">
+                  <p style="font-size: 14px;font-weight: 300;line-height: 18.2px;text-align: left;color: #000000;margin-bottom: 8px;">Have engaging, on-brand content?</p>
+                  <p style="font-size: 14px;font-weight: 300;line-height: 18.2px;text-align: left;max-width: 362px;color: #767676;
+                  ">Tag us or use #OneReal for a chance to be featured on Real’s social channels!</p>
+              </div>
               <!-- light-gray-box -->
               <div class="p_20 fs_28" style="
                     background-color: #f2f2f2;
